--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: localwriterai
+Source: localwritter
 Section: x11
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
@@ -6,4 +6,10 @@ Build-Depends: debhelper
 Standards-Version: 4.1.2
 Homepage: https://lliurex.net
 Vcs-Git: https://github.com/lliurex/localwritter
+
+Package: localwritterai
+Architecture: all
+Depends: libreoffice,epi-gtk
+Description:  localwritter Libreoffice extension
+        A LibreOffice Writer extension for local generative AI
 
