adding zero-center files

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: localwriterai
 Section: x11
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
-Build-Depends: debhelper
+Build-Depends: debhelper, llxsrchelper, zero-dev
 Standards-Version: 4.1.2
 Homepage: https://lliurex.net
 Vcs-Git: https://github.com/lliurex/localwritter
@@ -12,4 +12,10 @@ Architecture: all
 Depends: libreoffice,epi-gtk
 Description:  localwriter Libreoffice extension
         A LibreOffice Writer extension for local generative AI
+
+Package: zero-lliurex-localwriterai
+Architecture: all
+Depends: zero-center
+Description:  localwriterAI zero-center installer
+        localwriterAI installer using zero-center
 
